Segunda versión con 4 polos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
 	<h1>Hola Mundo</h1>
+	<p>primera imagen</p>
+	<img src="imagenes/polo.webp">
+	<p>segunda imagen</p>
+	<img src="imagenes/polo1.jpg">
+	<p>tercera imagen</p>
+	<img src="imagenes/polo2.jpg">
+	<p>cuarta imagen</p>
+	<img src="imagenes/polo3.jpg">
+
+
+
 	<p>Vamos a colocar una imagen</p>
 </body>
 </html>
