--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 	<img src="imagenes/polo2.jpg">
 	<p>cuarta imagen</p>
 	<img src="imagenes/polo3.jpg">
-
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
 	<p>Vamos a colocar una imagen</p>
