--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-
+	<h1>Hola caracola</h1>
 	<p>Vamos a colocar una imagen</p>
 </body>
 </html>
